examples/test/testpolicy16061.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16061
  namespace: namespace310
spec:
  podSelector:
    matchLabels:
      key1: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value15
          key46: value49
          key33: value7
      podSelector:
        matchLabels:
          key2: value23
          key38: value3
